--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 <title>Monaco test</title>
 <style>
 html, body { width: 100%; height: 100%; }
-#rootish { width: 100%; height: 100%; }
+#rootish { width: 900px; height: 800px; }
 </style>
 </head>
 <body>
@@ -18,6 +18,7 @@ html, body { width: 100%; height: 100%; }
                 value: start,
                 language: "javascript",
                 automaticLayout: true,
+                theme: "vs-dark",
             });
             globalThis.testEditor = testEditor;
         }
